[tool.poetry]
name = "marqo-overall-demo"
version = "0.1.0"
description = "demo of marqo functionality"
authors = ["Joshua Kim"]
license = "None"
readme = "README.md"
packages = [{include = "marqo_overall_demo"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
marqo = "^0.5.6"
streamlit = "^1.15.1"
apache-beam = "^2.43.0"
mwparserfromhell = "^0.6.4"
jupyterlab = "^3.5.0"
notebook = "^6.5.2"
torch = "^1.13.0"
requests = "^2.28.1"
imgdl = "^2.0.1"
wget = "^3.2"
cairosvg = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
